RESOLVED FIXED309912
[grid] Grid container fails to avoid float boxes
https://bugs.webkit.org/show_bug.cgi?id=309912
Summary [grid] Grid container fails to avoid float boxes
alan
Reported 2026-03-13 12:23:42 PDT
ssia
Attachments
Test reduction (391 bytes, text/html)
2026-03-13 12:26 PDT, alan
no flags
Patch (1.10 KB, patch)
2026-03-13 18:46 PDT, alan
no flags
[fast-cq]Patch (6.09 KB, patch)
2026-03-14 06:05 PDT, alan
no flags
alan
Comment 1 2026-03-13 12:26:02 PDT
Created attachment 478671 [details] Test reduction
alan
Comment 2 2026-03-13 18:46:57 PDT
alan
Comment 3 2026-03-14 06:05:14 PDT
Created attachment 478680 [details] [fast-cq]Patch
EWS
Comment 4 2026-03-16 05:54:10 PDT
Committed 309317@main (153d8b2510f5): <https://commits.webkit.org/309317@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478680 [details].
Radar WebKit Bug Importer
Comment 5 2026-03-16 05:55:13 PDT
Note You need to log in before you can comment on or make changes to this bug.