[grid] Grid container fails to avoid float boxes https://bugs.webkit.org/show_bug.cgi?id=309912

Reviewed by Antti Koivisto.

This is the grid(-lanes) fix for webkit.org/b/309737 (see commit message for details).

* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-with-adjacent-float-boxes-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-with-adjacent-float-boxes-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-with-adjacent-float-boxes.html: Added.
* Source/WebCore/rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutGrid):
(WebCore::RenderGrid::layoutMasonry):

Canonical link: https://commits.webkit.org/309317@main